# 3DDFA_V2

./: pyproject.toml  requirements.txt  setup.cfg  setup.py
lib/cpu_nms_cleardusk/: .gitignore  setup.py
lib/nms/: build.py
lib/sim3dr_cython/: .gitignore  setup.py
src/cpu_nms_cleardusk/: setup.py
src/landmark_detection_cleardusk/: facial_landmark_detection.py
src/landmark_detection_cleardusk/FaceBoxes/utils/: nms_wrapper.py
src/landmark_detection_cleardusk/Sim3DR/: Sim3DR.py
src/landmark_detection_cleardusk/apis/: facial_landmark_detection.py
src/landmark_detection_cleardusk/bfm/: bfm.py  bfm_onnx.py
src/landmark_detection_cleardusk/utils/: config.py  depth.py  onnx.py  pncc.py  render.py  render_ctypes.py  tddfa_util.py  uv.py
src/nms/: build.py
src/sim3dr_cython/: setup.py
src/tddfa/: TDDFA.py  TDDFA_ONNX.py  demo_api.py
src/tddfa/FaceBoxes/: FaceBoxes.py  FaceBoxes_ONNX.py
src/tddfa/Sim3DR/: Sim3DR.py
src/tddfa/apis/: facial_landmark_detection.py
src/tddfa/bfm/: bfm.py  bfm_onnx.py
src/tddfa/utils/: config.py  depth.py  functions.py  gpa.py  onnx.py  pncc.py  render.py  render_ctypes.py  serialization.py  tddfa_util.py  uv.py
tests/: demo_single_image.py  demo_video_webcam.py  latency.py
