[tool.poetry]
name = "tddfa"
version = "0.1.0"
description = ""
authors = ["cleardusk <cleardusk@cleardusk.com>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "tddfa", from="src"}
]

[tool.poetry.dependencies]
sim3dr_cython = {git = "https://github.com/glmanhtu/3DDFA_V2.git", subdirectory= "lib/sim3dr_cython"}
cpu_nms_cleardusk = {git = "https://github.com/glmanhtu/3DDFA_V2.git", subdirectory= "lib/cpu_nms_cleardusk"}
python = ">=3.7, <3.8"
torch = "^1.7.0"
torchvision = "^0.8.0"
matplotlib = "^3.3.0"
numpy = "^1.15.0"
opencv-python = "^4.2.0.32"
pyyaml = "*"
scipy = "*"
onnxruntime = "^1.12.1"


[build-system]
requires = ["cython", "numpy", "poetry-core"]
build-backend = "poetry.core.masonry.api"
