[tool.poetry]
name = "tddfa"
version = "0.1.0"
description = ""
authors = ["cleardusk <cleardusk@cleardusk.com>"]
license = "MIT"
readme = "readme.md"
packages = [
    {include = "tddfa", from="src"}
]

[tool.poetry.dependencies]
sim3dr_cython = {git = "https://github.com/glmanhtu/3DDFA_V2.git", subdirectory= "lib/sim3dr_cython"}
cpu_nms_cleardusk = {git = "https://github.com/glmanhtu/3DDFA_V2.git", subdirectory= "lib/cpu_nms_cleardusk"}
python = "^3.7"
torch = "^1.7.0"
torchvision = "0.*"
matplotlib = "3.*"
numpy = "1.*"
opencv-python = "4.*"
pyyaml = "*"
scipy = "*"
onnxruntime = "^1.12.1"


[build-system]
requires = ["cython", "numpy", "poetry-core"]
build-backend = "poetry.core.masonry.api"
