[tool.poetry]
name = "tddfa"
version = "0.1.0"
description = ""
authors = ["cleardusk <cleardusk@cleardusk.com>"]
license = "MIT"
readme = "readme.md"
packages = [
    {include = "tddfa", from="src"}
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
sim3dr_cython = {git = "https://github.com/glmanhtu/3DDFA_V2.git", subdirectory= "lib/sim3dr_cython"}
cpu_nms_cleardusk = {git = "https://github.com/glmanhtu/3DDFA_V2.git", subdirectory= "lib/cpu_nms_cleardusk"}
python = ">=3.7"
torch = ">=1.7.0"
torchvision = ">=0.8.0"
matplotlib = ">=3.0.0"
numpy = ">=1.21.1"
opencv-python = ">=4.0.1.24"
pyyaml = ">=5.1"
scipy = ">=1.3.0"
onnxruntime = ">=1.0.0"
cython = ">=0.29.32"
