[metadata]
name = landmark_detection_cleardusk
version = 0.0.1
author = cleardusk
author_email = cleardusk@cleardusk.com
description = The project is written by cleardusk, I just modify it to work as package
long_description = file: readme.md
long_description_content_type = text/markdown
url = https://some_url_to_the_code_usually_github.com
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE.txt
install_requires =
    torch
    torchvision
    matplotlib
    numpy
    opencv-python
    imageio
    imageio-ffmpeg
    pyyaml
    tqdm
    argparse
    cython
    scikit-image
    scipy
    onnxruntime
    gradio

package_dir == src
packages = find:
python_requires = >=3.6[options.packages.find]
where = src